# bifrost-usd

./: CMakeLists.txt
cmake/: setup.cmake
src/BifrostHydra/: CMakeLists-NoPep.txt
src/BifrostHydra/BifrostHdEngine/: CMakeLists-NoPep.txt  CMakeLists.txt  Container.h  JobTranslationData.h  Requirement.h  Runtime.cpp  Runtime.h  ValueTranslationData.h
src/BifrostHydra/BifrostHdEngine/config/: CMakeLists-NoPep.txt  bifrost_hydra_translation.json.in
src/BifrostHydra/BifrostHdEngine/translation/: CMakeLists-NoPep.txt  CMakeLists.txt  TypeTranslation.cpp
src/BifrostHydra/BifrostHdGraph/: CMakeLists-NoPep.txt  CMakeLists.txt
src/BifrostHydra/BifrostHdTranslators/: CMakeLists-NoPep.txt  CMakeLists.txt  Geometry.h  GeometryFn.cpp  Instances.cpp  Instances.h  Mesh.cpp  Mesh.h  Strands.cpp  Strands.h
src/BifrostUsd/: Layer.cpp
test/BifrostHydra/: CMakeLists.txt  testHdSceneIndexBifrostGraphPrim.cpp
